--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -3,14 +3,15 @@
 <html>
 
 	<head>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<title>Roost Books Newsletter</title>
 
 	</head>
 
 	<body>
-    	<h1>Batcave</h1>
-    		<p>This is the secret headquarters of Batman</p>
+    	<h1>New Books</h1>
+    		<p>Full Moon Suppers, March 2017</p>
 	</body>
 
 </html>
