--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>Roost Books Newsletter</title>
-</head>
-<body>
-	<h1>Roost Books</h1>
-	<nav>
-		<a href="#">Books</a>
-		<a href="#">Authors</a>
-		<a href="#">Blog</a>
-		<a href="#">About</a>
-		<a href="#">Contact</a>
-	</nav>
-<header>
-		 <h2>Roost Books focuses on the everyday activities that nourish and enrich our lives.</h2>
-</header>
-<section>
-	<ul>
-	    <li>Food</li>
-	    <li>Crafts</li>
-	    <li>Family</li>
-	    <li>Other</li>
-	 </ul>
-</section>
+	<head>
+    	<!-- <meta charset="UTF-8"> -->
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<title>Roost Books Newsletter</title>
+	</head>
+	<body>
+		<div id="top">
+			<h1>Roost Books</h1>
+				<nav>
+					<a class="navlinks" href="#">Books</a>
+					<a class="navlinks" href="#">Authors</a>
+					<a class="navlinks" href="#">Blog</a>
+					<a class="navlinks" href="#">About</a>
+					<a class="navlinks" href="#">Contact</a>
+				</nav>
+	<header>
+			 <h2>Roost Books focuses on the everyday activities that nourish and enrich our lives.</h2>
+	</header>
+		</div>
+
+		<section class="categories">
+	    	<img src="assets/Food.jpg" alt="Food" title="Food and Cooking Titles">
+	    	<h3>Food</h3>
+	    </section>
+		<section class="categories">
+	    	<img src="assets/Craft.jpg" alt="Craft" title="Craft and Homemade">
+	    	<h3>Craft</h3>
+	    </section>
+		<section class="categories">
+	    	<img src="assets/Family.jpg" alt="Family" title="Family and Lifestyle">
+	    	<h3>Family</h3>
+	    </section>
+		<section class="categories">
+	    	<img src="assets/Outdoors.jpg" alt="Outdoors" title="Outdoors and Nature">
+	    	<h3>Outdoors</h3>
    <!-- <img src="images/fullmoon.jpg" alt="Full Moon" title="#">-->
- <main>
-    <h3>Toast and Jam</h3>
+ 	<main>
+    <h4>Toast and Jam</h3>
     	<p>Modern Pairings for Rustic Baked Goods and Sweet and Savory Spreads
     	by Sarah Owens
     	Include recipes for buttermilk rye Bread, homemade mayonnaise and capered aioli, as well as herb and citrus salts, all excellent ingredients for a fine tomato sandwich.
@@ -39,32 +50,29 @@
 	    	February 2017
 	    	A beautiful cookbook celebrating the seasons</p>
     		</li>
-
-    		<li><p>Sweet Sugar, Sultry Spice // Malika Ameen
+    		<li>
+    		<p>Sweet Sugar, Sultry Spice // Malika Ameen
    			October 2016
     		Learn to use spices when baking sweet and savory treats</p>
     		</li>
-
-    		<li><p>Eat This Poem // Claire Kelley
+    		<li>
+    		<p>Eat This Poem // Claire Kelley
     		March 2017
     		Make delicious recipes inspired by your favorite books</p>
     		</li>
-
-    		<li><p>Sweet Sugar, Sultry Spice // Malika Ameen
+    		<li>
+    		<p>Sweet Sugar, Sultry Spice // Malika Ameen
     		October 2016
     		Learn to use spices when baking sweet and savory treats</p>
     		</li>
 		</ul>
 </main>
-
 <footer>
     <p>Roost Books is an imprint of Shambhala Publications
     Follow @roostbooks on Facebook, Twitter, Instagram, and Pinterest
-    <a href="mailto:friend@friend.com">Forward this newsletter to a frien</a>
-	</p>
-	
+    <a href="mailto:friend@friend.com">Forward this newsletter to a friend</a>
+	</p>	
     <p><a href="#">Go to top</a></p>
-	
 	</body>
 </footer>
 </html>
