--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -6,6 +6,7 @@
 		<title>Roost Books Newsletter</title>
 	</head>
 	<body>
+		<div id="wrapper">
 		<div id="top">
 			<h1>Roost Books</h1>
 			<nav>
@@ -22,7 +23,7 @@
    <!-- <img src="images/fullmoon.jpg" alt="Full Moon" title="#">-->
  	<main>
  		<section id="collage">
-			<img src="images/bread.png" alt="bread" title="Sourdough">
+			<img id="bread" src="images/bread.png" alt="bread" title="Sourdough">
 			<img src="images/toast.png" alt="Toast and Jam" title="toast">
 	   	 	<h4>Toast and Jam</h4>
 	    	<p>
@@ -40,24 +41,24 @@
     	    <h4>New and Forthcoming Titles</h4>
 		      <ul>
     		    <li>
-	    		  <p>Full Moon Suppers // Sarah Waldman
-	    		  February 2017
-	    		  A beautiful cookbook celebrating the seasons</p>
+	    		  <h6>Full Moon Suppers <span class="author"> // Sarah Waldman</span></h6>
+	    		  <p class="date">February 2017</p>
+	    		  <p class="description">A beautiful cookbook celebrating the seasons</p>
     		    </li>
     		    <li>
-	    	   	  <p>Sweet Sugar, Sultry Spice // Malika Ameen
-	   			  October 2016
-	    		  Learn to use spices when baking sweet and savory treats</p>
+	    	   	  <h6>Sweet Sugar, Sultry Spice <span class="author"> // Malika Ameen</h6>
+	   			  <p class="date">October 2016</p>
+	    		  <p class="description">Learn to use spices when baking sweet and savory treats</p>
     		    </li>
     		    <li>
-    		      <p>Eat This Poem // Claire Kelley
-    		      March 2017
-    		      Make delicious recipes inspired by your favorite books</p>
+    		      <h6>Eat This Poem <span class="author"> // Claire Kelley </h6>
+    		      <p class="date">March 2017</p>
+    		      <p class="description">Make delicious recipes inspired by your favorite books</p>
     		    </li>
     		    <li>
-    		       <p>Sweet Sugar, Sultry Spice // Malika Ameen
-    		       October 2016
-    		       Learn to use spices when baking sweet and savory treats</p>
+    		       <h6>Sweet Sugar, Sultry Spice <span class="author"> // Malika Ameen </h6>
+    		       <p class="date">October 2016</p>
+    		       <p class="description">Learn to use spices when baking sweet and savory treats</p>
     		    </li>
 		       </ul>
 		</section>
@@ -81,12 +82,13 @@
 		</section>
 </main>
 <footer>
-    <p>Roost Books is an imprint of Shambhala Publications
-    Follow @roostbooks on Facebook, Twitter, Instagram, and Pinterest
+    <p>Roost Books is an imprint of Shambhala Publications</p>
+    <p>Follow @roostbooks on Facebook, Twitter, Instagram, and Pinterest
     <a href="mailto:friend@friend.com">Forward this newsletter to a friend</a>
 	</p>	
     <p><a href="#">Go to top</a></p>
 </footer>
+</div>
 </body>
 </html>
 
