--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -72,20 +72,20 @@
 		       </ul>
 		</section>
 		<hr>
-		<section id="photogrid">
-			<div class="categories">
+		<section id="two_column" class="clearfix">
+			<div class="left">
 		    	<img src="images/food.jpg" alt="Food" title="Food and Cooking Titles">
 		    	<h3>Food</h3>
 		    </div>
-			<div class="categories">
+			<div class="left">
 		    	<img src="images/craft.jpg" alt="Craft" title="Craft and Homemade">
 		    	<h3>Craft</h3>
 		    </div>
-			<div class="categories">
+			<div class="right">
 		    	<img src="images/family.jpg" alt="Family" title="Family and Lifestyle">
 		    	<h3>Family</h3>
 		    </div>
-			<div class="categories">
+			<div class="right">
 		    	<img src="images/outdoors.jpg" alt="Outdoors" title="Outdoors and Nature">
 		    	<h3>Outdoors</h3>
 		    </div>
