--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -24,7 +24,7 @@
     <hr>
  	<main>
  		<section id="collage" class="clearfix">
- 			<div class="col-1"> 
+ 			<div class="col-0"> 
  				<img id="bread" src="images/bread.png" alt="bread" title="Sourdough">
  				<h4>Toast and Jam</h4>
 	    		<p class="featuresubtitle"> Modern Pairings for Rustic Baked Goods and Sweet and Savory Spreads</p>
@@ -36,10 +36,10 @@
  				<img id="toast" src="images/toast.png" alt="Toast and Jam" title="toast">
  			
  			</div>
- 			<div class="col2">
+ 			<div class="col-2">
  				<img id="sarah" src="images/sarah.png" alt="Sarah Owens" title="Author of Toast and Jam">
  			</div>
- 			<div class="col3">
+ 			<div class="col-3">
  				<img id="baking" src="images/baking.png" alt="Baking Tins" title="Baking Tins">
  			</div>
    		</section>
@@ -73,19 +73,19 @@
 		</section>
 		<hr>
 		<section id="two_column" class="clearfix">
-			<div class="left">
+			<div class="fourboxes">
 		    	<img src="images/food.jpg" alt="Food" title="Food and Cooking Titles">
 		    	<h3>Food</h3>
 		    </div>
-			<div class="left">
+			<div class="fourboxes">
 		    	<img src="images/craft.jpg" alt="Craft" title="Craft and Homemade">
 		    	<h3>Craft</h3>
 		    </div>
-			<div class="right">
+			<div class="fourboxes">
 		    	<img src="images/family.jpg" alt="Family" title="Family and Lifestyle">
 		    	<h3>Family</h3>
 		    </div>
-			<div class="right">
+			<div class="fourboxes">
 		    	<img src="images/outdoors.jpg" alt="Outdoors" title="Outdoors and Nature">
 		    	<h3>Outdoors</h3>
 		    </div>
