--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -11,6 +11,7 @@
 	<body>
 		<div id="wrapper">
 		<div id="top">
+			<img id="logo" src="images/roost_logo.png" alt="Roost Books" title="logo">
 			<h1>Roost Books</h1>
 			<nav>
 				<a class="navlinks" href="#">Books</a>
@@ -28,11 +29,15 @@
  		<section id="collage" class="clearfix">
  			<div class="col-0"> 
  				<img id="bread" src="images/bread.png" alt="bread" title="Sourdough">
+ 				<div id="featurebook">
  				<h4>Toast and Jam</h4>
-	    		<p class="featuresubtitle"> Modern Pairings for Rustic Baked Goods and Sweet and Savory Spreads</p>
+	    		<p class="featuresubtitle"> Modern Pairings for Rustic Baked Goods</p>
+	    		<p class="featuresubtitle2"> and Sweet and Savory Spreads</p>
 		    	<p class="featureauthor">by Sarah Owens</p>
-		    	<p class="featuredescription">Include recipes for buttermilk rye Bread, homemade mayonnaise and capered aioli, as well as herb and citrus salts, all excellent ingredients for a fine tomato sandwich.</p>
-	    		<p><a href="http://www.roostbooks.com">Learn more...</a></p>
+		    	<hr>
+		    	<p class="featuredescription">Include recipes for buttermilk rye Bread, homemade mayonnaise and capered aioli, as well as herb and citrus salts, all excellent ingredients for a fine tomato sandwich.
+	    		<p class="link"><a href="http://www.roostbooks.com">Learn more ></a></p>
+	    		</div>
  			</div>
  			<div class="col-1">
  				<img id="toast" src="images/toast.png" alt="Toast and Jam" title="toast">
@@ -45,10 +50,11 @@
  				<img id="baking" src="images/baking.png" alt="Baking Tins" title="Baking Tins">
  			</div>
    		</section>
-   		<hr>
+   	
    		<section id="bookshelf">
-		    <h5>Roost Bookshelf</h5>
-		    <img id="books" src="images/bookshelf.png" alt="Bookshelf" title="Bookshelf">
+		    <!-- <h5>Roost Bookshelf</h5> -->
+		    <img id="books" src="images/bookshelf2.png" alt="Bookshelf" title="Bookshelf">
+		    <div id="new">
     	    <h4>New and Forthcoming Titles</h4>
 		      <ul>
     		    <li>
@@ -67,13 +73,15 @@
     		      <p class="description">Make delicious recipes inspired by your favorite books</p>
     		    </li>
     		    <li>
-    		       <h6>Sweet Sugar, Sultry Spice <span class="author"> // Malika Ameen </h6>
+    		       <h6>Sweet Sugar, Sultry Spice <span class="author"> // Malika Ameen</span>
+    		       </h6>
     		       <p class="date">October 2016</p>
     		       <p class="description">Learn to use spices when baking sweet and savory treats</p>
     		    </li>
 		       </ul>
+		       </div>
 		</section>
-		<hr>
+
 		<section id="two_column" class="clearfix">
 			<div class="fourboxes">
 		    	<img src="images/food.jpg" alt="Food" title="Food and Cooking Titles">
@@ -94,8 +102,8 @@
 		</section>
     </main>
     <footer>
-      <p>Roost Books is an imprint of Shambhala Publications</p>
-      <p>Follow @roostbooks on Facebook, Twitter, Instagram, and Pinterest
+      <p class="footer">Roost Books is an imprint of Shambhala Publications</p>
+      <p class="footer">Follow @roostbooks on Facebook, Twitter, Instagram, and Pinterest
       <a href="mailto:friend@friend.com">Forward this newsletter to a friend</a>
 	  </p>	
       <p><a href="#">Go to top</a></p>
